--- a/Artist/app/src/main/res/layout/artist_item.xml
+++ b/Artist/app/src/main/res/layout/artist_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_artist_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin5"
-    android:id="@+id/cv_artist_item">
+    android:layout_margin="@dimen/margin5">
 
     <RelativeLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/ripple_background">
@@ -17,15 +17,16 @@
             android:layout_width="@dimen/artist_image_width"
             android:layout_height="@dimen/artist_image_height"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/txt_artist_name"
             style="@style/ArtistTitleTextStyel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/margin5"
             android:layout_toEndOf="@+id/img_artist" />
 
@@ -37,13 +38,12 @@
             android:orientation="horizontal">
 
             <ImageView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/txt_plays"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="@dimen/margin5"
-                android:src="@drawable/play_icon" />
+                android:src="@drawable/play_icon"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/txt_plays"
