--- a/Artist/app/src/main/res/layout/activity_main.xml
+++ b/Artist/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:focusableInTouchMode="true"
+    android:orientation="vertical"
     tools:context="com.example.artist.ui.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -21,22 +20,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/edt_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:inputType="text"
-                android:maxLines="1"
-                android:hint="@string/search_users_hint"/>
+                <EditText
+                    android:id="@+id/edt_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/search_users_hint"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:padding="20dp" />
+
                 <ImageView
                     android:id="@+id/search"
-                    android:layout_centerVertical="true"
-                    android:src="@android:drawable/ic_menu_search"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="20dp"/>
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="20dp"
+                    android:src="@android:drawable/ic_menu_search"
+                    tools:ignore="ContentDescription" />
             </RelativeLayout>
 
             <com.google.android.material.tabs.TabLayout
@@ -52,6 +54,6 @@
         android:id="@+id/vp_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></androidx.viewpager.widget.ViewPager>
+        android:layout_weight="1" />
 
 </LinearLayout>
