--- a/Artist/app/src/main/res/layout/album_item.xml
+++ b/Artist/app/src/main/res/layout/album_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_album_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin5">
 
     <RelativeLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/ripple_background"
@@ -15,7 +15,8 @@
         <ImageView
             android:id="@+id/img_album"
             android:layout_width="@dimen/album_image_width"
-            android:layout_height="@dimen/album_image_height" />
+            android:layout_height="@dimen/album_image_height"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/txt_album_artist"
@@ -30,8 +31,8 @@
             style="@style/ALbumTitleTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_below="@+id/txt_album_artist"
+            android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/margin5"
             android:layout_toEndOf="@+id/img_album" />
 
@@ -43,13 +44,12 @@
             android:orientation="horizontal">
 
             <ImageView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/txt_plays"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="@dimen/margin5"
-                android:src="@drawable/play_icon" />
+                android:src="@drawable/play_icon"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/txt_plays"
