--- a/Artist/app/src/main/res/layout/fragment_top_albums.xml
+++ b/Artist/app/src/main/res/layout/fragment_top_albums.xml
@@ -1,13 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.bassem.lastfm.ui.topalbumslisting.TopAlbumsFragment">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rclr_albums"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent" />
 
     <ProgressBar
         android:id="@+id/prgrs_main"
@@ -19,5 +18,5 @@
     <include
         android:id="@+id/empty_layout"
         layout="@layout/empty_results"
-        android:visibility="gone"></include>
+        android:visibility="gone" />
 </FrameLayout>
