--- a/Artist/app/src/main/res/layout/track_item.xml
+++ b/Artist/app/src/main/res/layout/track_item.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_track_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin5"
-    android:id="@+id/cv_track_item"
-    >
+    android:layout_margin="@dimen/margin5">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +16,8 @@
             android:id="@+id/img_track"
             android:layout_width="@dimen/track_image_width"
             android:layout_height="@dimen/track_image_height"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/txt_track_name"
@@ -32,8 +32,8 @@
             android:id="@+id/txt_track_artist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_below="@id/txt_track_name"
+            android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/margin5"
             android:layout_toEndOf="@+id/img_track" />
 
@@ -50,7 +50,6 @@
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/txt_plays"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="@dimen/margin5"
                 android:src="@drawable/play_icon" />
